package-parser: Change way to handle artefacts.